--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "scripts": {
     "test": "npm run eslint && npm run mocha",
     "eslint": "eslint src/. test/. --config .eslintrc.json",
-    "start": "pm2 start ecosystem.config.js",
+    "start": "pm2 start ecosystem.json",
+    "setup":"pm2 deploy ecosystem.json production setup",
+    "deploy":"pm2 deploy ecosystem.json production",
     "mocha": "mocha test/ --recursive"
   },
   "dependencies": {
